# meet-scribe

./: .gitignore  MeetScribe_README.md  README.md  config.yaml  pyproject.toml
notebooks/: meet_scribe_batch_colab.ipynb  meet_scribe_colab.ipynb
src/meet_scribe/: audio_extractor.py  diarizer.py  formatter.py  main.py  transcriber.py
